- Regenerate the js versions of the new examples for headerClassName - Rearange some csss between the plugins - Fix problems with the aligned column header labels overlapping UI elements

--- a/handsontable/src/plugins/hiddenColumns/hiddenColumns.scss
+++ b/handsontable/src/plugins/hiddenColumns/hiddenColumns.scss
@@ -18,6 +18,14 @@
   position: relative;
 }
 
+.handsontable th.afterHiddenColumn div.htLeft {
+  margin-left: 10px;
+}
+
+.handsontable th.beforeHiddenColumn div.htRight {
+  margin-right: 10px;
+}
+
 .handsontable th.beforeHiddenColumn::after {
   right: 1px;
   content: '\25C0'; /* left arrow */
